--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
             width: 100%;
             height: 60px;
             text-align: right;
-            padding: 10px;
+            padding: auto 10px;
             font-size: 1.8em;
             border: none;
             border-radius: 10px;
             background: #bbdefb;
             margin-bottom: 15px;
             color: #000;
+            box-shadow: inset 0px 2px 5px rgba(0, 0, 0, 0.1);
         }
         .buttons {
             display: grid;
@@ -66,26 +67,43 @@
         <input type="text" class="display" id="display" disabled>
         <div class="buttons">
             <button onclick="clearDisplay()">C</button>
-            <button onclick="appendValue('/')">/</button>
-            <button onclick="appendValue('*')">*</button>
-            <button onclick="appendValue('-')">-</button>
+            <button onclick="appendValue('sin(')">sin</button>
+            <button onclick="appendValue('cos(')">cos</button>
+            <button onclick="appendValue('tan(')">tan</button>
 
-            <button onclick="appendValue('7')">7</button>
+            <button onclick="appendValue('log(')">log</button>
+            <button onclick="appendValue('ln(')">ln</button>
+            <button onclick="appendValue('pi')">π</button>
+            <button onclick="appendValue('e')">e</button>
+
+            <button onclick="appendValue('(')">(</button>
+            <button onclick="appendValue(')')">)</button>
+            <button onclick="appendValue('^')">^</button>
+            <button onclick="appendValue('sqrt(')">√</button>
+
+            <button onclick="appendValue('x^y')">x^y</button>
+             <button onclick="appendValue('7')">7</button>
             <button onclick="appendValue('8')">8</button>
             <button onclick="appendValue('9')">9</button>
-            <button onclick="appendValue('+')">+</button>
 
-            <button onclick="appendValue('4')">4</button>
+            <button onclick="appendValue('x!')">x!</button>
+             <button onclick="appendValue('4')">4</button>
             <button onclick="appendValue('5')">5</button>
             <button onclick="appendValue('6')">6</button>
 
+            <button onclick="appendValue('%')">%</button>
             <button onclick="appendValue('1')">1</button>
             <button onclick="appendValue('2')">2</button>
             <button onclick="appendValue('3')">3</button>
-            <button class="equal" onclick="calculateResult()">=</button>
 
-            <button onclick="appendValue('0')" style="grid-column: span 2;">0</button>
+            <button onclick="appendValue('/')">/</button>
+            <button onclick="appendValue('*')">*</button>
+            <button onclick="appendValue('-')">-</button>
+            <button onclick="appendValue('+')">+</button>
+
+            <button onclick="appendValue('0')">0</button>
             <button onclick="appendValue('.')">.</button>
+            <button class="equal" onclick="calculateResult()">=</button>
         </div>
     </div>
     <script>
